<resources>
    <string name="app_name">兔子习惯APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">用户名</string>
    <string name="nav_header_subtitle">用户签名</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="menu_filter">类别</string>
    <string name="menu_clear">清除已终结</string>
    <string name="menu_refresh">刷新</string>
    <string name="nav_all">所有</string>
    <string name="nav_active">激活</string>
    <string name="nav_completed">已终结</string>

    <string name="no_habits_all">没有任何习惯!加号按钮添加!</string>
    <string name="no_habits_active">没有激活的习惯!</string>
    <string name="no_habits_completed">没有终结的习惯!</string>
    <string name="no_habits_add">添加一个习惯.</string>

    <string name="habit_marked_complete">习惯被终结</string>
    <string name="habit_marked_active">习惯被激活</string>
    <string name="loading_habits_error">取出习惯时出错...</string>
    <string name="completed_habits_cleared">终结所有习惯</string>

    <string name="label_all">所有习惯</string>
    <string name="label_active">活动习惯</string>
    <string name="label_completed">已完成习惯</string>

    <string name="successfully_saved_habit_message">成功保存</string>
    <string name="list_title">习惯任务列表</string>
    <string name="statistics_title">统计图表</string>
    <string name="title_hint">标题</string>
    <string name="description_hint">输入习惯简称.</string>
    <string name="empty_habit_message">习惯不能为空</string>
    <string name="text_goto_main">进入主界面</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_habit_list">习惯列表</string>
    <string name="title_statistics">图表</string>
    <string name="title_discover">发现</string>
    <string name="title_mine">我的</string>
    <string name="title_fragment_discover">这是发现页面</string>
    <string name="title_fragment_mine">这是我的页面</string>
    <string name="title_fragment_statistics">这是图表页面</string>
    <string name="title_fragment_list">这是习惯列表页面</string>
    <string name="title_activity_main">兔子习惯</string>
    <string name="des_title">标题:</string>
    <string name="hint_title">每天多喝水</string>
    <string name="des_content">简介:</string>
    <string name="hint_content">半小时喝水100毫升</string>
    <string name="des_interval">间隔:</string>
    <string name="des_alert">提醒:</string>
    <string name="des_accept">达成:</string>
    <string name="des_delay">推迟:</string>
    <string name="des_minute">分钟</string>
    <string name="des_rb_ring">铃声</string>
    <string name="des_rb_vibrate">震动</string>
    <string name="des_rb_light">闪光</string>
    <string name="des_rb_shake">摇一摇</string>
    <string name="des_rb_turnoff">翻转</string>
    <string name="des_rb_cover">遮挡</string>
    <string name="title_toolbar">编辑</string>
    <string name="title_toolbar_sub">好习惯不在多,在精!</string>
    <string name="des_menu_detail_edit">编辑</string>
    <string name="des_menu_detail_finish">完成</string>
    <string name="des_menu_accept">已执行</string>
    <string name="des_menu_skip">跳过</string>
    <string name="noti_alert_title">闹钟提示:</string>
    <string name="noti_alert_content">单击此处去处理闹钟,或10秒后自动跳过!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tip_can_not_edit">请先停止再编辑!</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="text_btn_login">登陆</string>
    <string name="text_cb_remember_pwd">记住密码?</string>
    <string name="text_tv_forget_pwd">忘记密码</string>
    <string name="label_login">登陆</string>
    <string name="label_register">注册</string>
    <string name="hint_et_reg_username">用户名</string>
    <string name="hint_et_reg_age">年龄</string>
    <string name="hint_et_reg_desc">简介</string>
    <string name="hint_et_reg_password">密码</string>
    <string name="hint_et_reg_again_password">再输入一次</string>
    <string name="hint_et_reg_email">邮箱</string>
    <string name="rb_reg_male">男</string>
    <string name="rb_reg_female">女</string>
    <string name="text_btn_reg">注册</string>
    <string name="tv_reg_tip_email">注册成功需要前往邮箱验证,否则无法登陆!</string>
    <string name="text_btn_register">注册</string>
    <string name="text_btn_test">异常测试</string>
    <string name="label_password">密码操作</string>
    <string name="text_tv_pwd_opt_modify">修改密码</string>
    <string name="text_tv_pwd_opt_old_pwd">旧密码</string>
    <string name="text_tv_pwd_opt_new_pwd">新密码</string>
    <string name="text_tv_pwd_opt_again_pwd">再次输入密码</string>
    <string name="text_btn_modify_pwd">修改密码</string>
    <string name="text_tv_pwd_opt_email">邮箱</string>
    <string name="text_btn_forget_pwd">找回密码</string>
    <string name="action_center">个人中心</string>
    <string name="action_about">关于</string>
    <string name="text_btn_edit_info">编辑资料</string>
    <string name="hint_et_info_username">用户名</string>
    <string name="hint_et_info_sex">性别</string>
    <string name="hint_et_info_age">年龄</string>
    <string name="hint_et_info_desc">简介</string>
    <string name="text_btn_info_exit">退出登录</string>
    <string name="text_btn_info_update">确定修改</string>
    <string name="text_tv_custom_dialog_loading">正在登录</string>
    <string name="text_btn_camera">拍照</string>
    <string name="text_btn_album">相册</string>
    <string name="text_btn_cancel">取消</string>
    <string name="hint_et_reg_nickname">昵称</string>
    <string name="hint_et_info_nickname">昵称</string>

</resources>
