<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tv_pwd_opt_modify"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_tv_pwd_opt_old_pwd" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_tv_pwd_opt_new_pwd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_again_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_tv_pwd_opt_again_pwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_modify_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_round"
            android:text="@string/text_btn_modify_pwd" />
    </LinearLayout>
</LinearLayout>